--- a/composer.json
+++ b/composer.json
@@ -83,6 +83,6 @@
         "symfony/maker-bundle": "^1.61",
         "symfony/stopwatch": "7.1.*",
         "symfony/web-profiler-bundle": "7.1.*",
-        "zenstruck/foundry": "^2.2"
+        "zenstruck/foundry": "*"
     }
 }
