--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,6 +21,9 @@ security:
             custom_authenticator: App\Security\LoginFormAuthenticator
             
             logout: true
+            remember_me:
+                secret: '%kernel.secret%'
+                #always_remember_me: true
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
 
