--- a/.env
+++ b/.env
@@ -26,3 +26,7 @@ APP_SECRET=c53e27eaea16120e043ba092a4d07a73
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 DATABASE_URL="mysql://root:password@127.0.0.1:52204/main?sslmode=disable&charset=utf8mb4&serverVersion=9.1.0-1.el9"
+
+###> symfony/mailer ###
+MAILER_DSN="smtp://241268265d00ec:fc4bca93903ab4@sandbox.smtp.mailtrap.io:2525"
+###< symfony/mailer ###
