--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,9 @@
         "symfony/runtime": "7.1.*",
         "symfony/security-bundle": "7.1.*",
         "symfony/twig-bundle": "7.1.*",
+        "symfony/ux-react": "^2.21",
         "symfony/validator": "7.1.*",
+        "symfony/webpack-encore-bundle": "^2.2",
         "symfony/yaml": "7.1.*",
         "symfonycasts/reset-password-bundle": "^1.22",
         "symfonycasts/tailwind-bundle": "^0.6.0"
